new workbook with CNN

--- a/disaster_tweet_project.ipynb
+++ b/disaster_tweet_project.ipynb
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "239290a0",
    "metadata": {},
    "outputs": [
@@ -841,10 +841,6 @@
     "print('Logistic Regression F1-score:', f1_lr)\n",
     "print('Classification report for Logistic Regression:', classification_report(y_test, pred_lr))\n",
     "\n",
-    "# CatBoost model with text features\n",
-    "# CatBoost can handle categorical/text features automatically using its text processing capabilities.\n",
-    "# We specify the column indices of text features (here, column index 3 corresponds to 'text').\n",
-    "\n",
     "# Create training and test Pools\n",
     "test_pool = Pool(data=test_df[['text']], label=y_test, text_features=[0])\n",
     "train_pool = Pool(data=train_df[['text']], label=y_train, text_features=[0])\n",
@@ -886,27 +882,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "7288214d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<catboost.core.Pool at 0x78dc5d92c290>"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_pool"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "a6c8d975",
    "metadata": {},
@@ -944,10 +919,10 @@
     "\n",
     "# Cross‑validation\n",
     "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "scorer = make_scorer(f1_score)\n",
+    "scorer = make_scorer('accuracy', f1_score)\n",
     "\n",
     "# Grid search\n",
-    "gs = GridSearchCV(pipe, param_grid, scoring=scorer, cv=cv, n_jobs=-1)\n",
+    "gs = GridSearchCV(pipe, param_grid, scoring=['accuracy', 'f1'], cv=cv, n_jobs=-1)\n",
     "gs.fit(df['text'], df['target'])\n",
     "gs.predict(test_pool)\n",
     "y_test"
